[gd_scene load_steps=2 format=3 uid="uid://bg5rjygowm31h"]

[ext_resource type="Script" uid="uid://llloks0pforn" path="res://scripts/hurtbox.gd" id="1_ksusc"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_ksusc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisabledTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisabledTimer" to="." method="_on_disabled_timer_timeout"]
